implemented funding endpoints
